Fixing the javax/xml/bind/JAXBException raised when application goes past the "Checking permissions" stage when access the AWS S3 bucket